1.Use middleware for error handling, removing try-catch in controllers. 2.Customize env commands for 'dev' and 'production' feedback. 3.Customize error states, including NPM error message customization. 4.Apply Node.js uncaughtException for unexpected errors.
